[project]
name = "ament_lint_pre_commit"
description = "Out-of-the-box ament_lint hooks for pre-commit"
version = "0.0.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Ignacio Vizzo", email = "ignacio@dexory.com"},
]

requires-python = ">=3.12"
dependencies = [
    "ament-black==0.2.6",
    "uvloop==0.21.0",    
]

classifiers  = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/nachovizzo/ament_lint_pre_commit"
